feat alf7: transformer H5pThumbnailExecutor